# opti_rust

./: Cargo.toml  README.md  main.rs
gui/: chart.rs  update.rs  view.rs
model/: application.rs  chart.rs  mod.rs  request.rs
src/: main.rs
src/gui/: chart.rs  mod.rs  update.rs  view.rs
src/model/: application.rs  chart.rs  mod.rs  monte_carlo.rs  params.rs  utils.rs
